# frankenpandas

./: .gitignore  AGENTS.md  Cargo.toml  EXHAUSTIVE_LEGACY_ANALYSIS.md  FEATURE_PARITY.md  README.md
.github/workflows/: ci.yml
artifacts/ci/: governance_gate_report.json
artifacts/perf/: ROUND8_ISOMORPHISM_PROOF.md
artifacts/phase2c/: ADVERSARIAL_FUZZ_CORPUS.md  ASUPERSYNC_RUST_INTEGRATION.md  ASUPERSYNC_TEST_LOGGING_EVIDENCE.md  ASUPERSYNC_THREAT_MODEL.md  COMPAT_CLOSURE_ANCHOR_MAP.md  COMPAT_CLOSURE_CONTRACT_TABLE.md  COMPAT_CLOSURE_DIFFERENTIAL_FAULT_INJECTION_EVIDENCE.md  COMPAT_CLOSURE_E2E_SCENARIO_EVIDENCE.md  COMPAT_CLOSURE_FINAL_EVIDENCE_PACK.md  COMPAT_CLOSURE_OPTIMIZATION_ISOMORPHISM_EVIDENCE.md  COMPAT_CLOSURE_RUST_INTEGRATION.md  COMPAT_CLOSURE_TEST_LOGGING_EVIDENCE.md  COMPAT_CLOSURE_THREAT_MODEL.md  COVERAGE_FLAKE_BUDGETS.md  DOC_COMPLEXITY_PERF.md  DOC_ERROR_TAXONOMY.md  TEST_CONVENTIONS.md  (+12 more)
crates/fp-conformance/: Cargo.toml
crates/fp-conformance/fixtures/packets/: fp_p2c_001_duplicate_hardened.json  fp_p2c_003_series_add_duplicate_hardened.json  fp_p2c_004_series_join_cross_rejected_strict.json  fp_p2c_010_dataframe_iloc_out_of_bounds_strict.json  fp_p2c_010_dataframe_loc_missing_label_strict.json  fp_p2c_010_series_iloc_basic_strict.json  fp_p2c_010_series_loc_basic_strict.json  fp_p2d_014_dataframe_concat_basic_strict.json  fp_p2d_014_dataframe_concat_column_mismatch_error_strict.json  fp_p2d_014_dataframe_concat_duplicate_index_hardened.json  fp_p2d_014_dataframe_merge_column_inner_duplicates_strict.json  fp_p2d_014_dataframe_merge_column_left_missing_hardened.json  fp_p2d_014_dataframe_merge_column_outer_order_hardened.json  fp_p2d_014_dataframe_merge_column_right_order_strict.json  fp_p2d_014_dataframe_merge_index_inner_duplicates_strict.json  fp_p2d_014_dataframe_merge_index_outer_order_hardened.json  fp_p2d_015_nan_count_all_missing_hardened.json  fp_p2d_015_nan_count_mixed_strict.json  fp_p2d_015_nan_max_all_missing_hardened.json  fp_p2d_015_nan_max_mixed_strict.json  fp_p2d_015_nan_mean_all_missing_hardened.json  fp_p2d_015_nan_mean_mixed_strict.json  fp_p2d_015_nan_min_all_missing_hardened.json  fp_p2d_015_nan_min_mixed_strict.json  fp_p2d_015_nan_std_insufficient_hardened.json  fp_p2d_015_nan_std_sample_strict.json  fp_p2d_015_nan_sum_all_missing_hardened.json  fp_p2d_015_nan_sum_mixed_strict.json  fp_p2d_015_nan_var_insufficient_hardened.json  fp_p2d_015_nan_var_sample_strict.json  fp_p2d_016_csv_round_trip_crlf_hardened.json  fp_p2d_016_csv_round_trip_embedded_newline_strict.json  fp_p2d_016_csv_round_trip_escaped_quotes_strict.json  fp_p2d_016_csv_round_trip_extra_field_error_hardened.json  fp_p2d_016_csv_round_trip_header_only_strict.json  fp_p2d_016_csv_round_trip_mixed_dtypes_strict.json  fp_p2d_016_csv_round_trip_no_trailing_newline_hardened.json  fp_p2d_016_csv_round_trip_numeric_null_hardened.json  fp_p2d_016_csv_round_trip_quoted_commas_strict.json  fp_p2d_016_csv_round_trip_quoted_empty_fields_hardened.json  (+135 more)
crates/fp-conformance/oracle/: pandas_oracle.py
crates/fp-conformance/src/: lib.rs
crates/fp-conformance/tests/: ag_e2e.rs  proptest_properties.rs
crates/fp-expr/: Cargo.toml
crates/fp-expr/src/: lib.rs
crates/fp-frame/: Cargo.toml
crates/fp-frame/src/: lib.rs
crates/fp-frankentui/: Cargo.toml
crates/fp-frankentui/src/: lib.rs
crates/fp-groupby/: Cargo.toml
crates/fp-groupby/src/: lib.rs
crates/fp-io/: Cargo.toml
crates/fp-io/src/: lib.rs
crates/fp-runtime/: Cargo.toml
crates/fp-runtime/src/: lib.rs
crates/fp-runtime/src/asupersync/: recovery.rs
(+80 files in other folders)
