[workspace]
resolver = "2"
members = [
  "crates/fp-types",
  "crates/fp-columnar",
  "crates/fp-frame",
  "crates/fp-index",
  "crates/fp-expr",
  "crates/fp-groupby",
  "crates/fp-join",
  "crates/fp-io",
  "crates/fp-conformance",
  "crates/fp-runtime",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
bumpalo = { version = "3.16.0", features = ["collections"] }
csv = "1.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
