[package]
name = "fp-frame"
version = "0.1.0"
edition = "2024"
license-file = "../../LICENSE"

[dependencies]
fp-columnar = { path = "../fp-columnar" }
fp-index = { path = "../fp-index" }
fp-runtime = { path = "../fp-runtime" }
fp-types = { path = "../fp-types" }
serde = { workspace = true }
thiserror = { workspace = true }
