[package]
name = "fp-groupby"
version = "0.1.0"
edition = "2024"
license-file = "../../LICENSE"

[dependencies]
bumpalo = { workspace = true }
fp-columnar = { path = "../fp-columnar" }
fp-frame = { path = "../fp-frame" }
fp-index = { path = "../fp-index" }
fp-runtime = { path = "../fp-runtime" }
fp-types = { path = "../fp-types" }
thiserror = { workspace = true }
