[package]
name = "fp-io"
version = "0.1.0"
edition = "2024"
license-file = "../../LICENSE"

[dependencies]
csv = { workspace = true }
fp-columnar = { path = "../fp-columnar" }
fp-frame = { path = "../fp-frame" }
fp-index = { path = "../fp-index" }
fp-types = { path = "../fp-types" }
serde_json = { workspace = true }
thiserror = { workspace = true }
